--- a/README
+++ b/README
@@ -1,6 +1,8 @@
+Documentation can be found at http://www.technarian.com/?page_id=30
+
 Currently supports converting axis-angle representations of rotations to/from quaternions, converting quaternion rotations to rotation matrices, and quaternion multiplication. Next release will support rotating vertices by quaternions and spherical interpolation (slerp). Packaged as a header-only file for ease of portable, and licensed under the 2-clause BSD license.
 
-While this library has been tested and seems to behave in a stable manner, it should be considered a preview version due to incompleteness. That is to say, it works for basic uses, but currently lacks many functions (and overloaded versions of existing functions) that somebody looking for a complete quaternion library might be looking for. Documentation is currently somewhat low, too, though this should be fixed by March 15 2012.
+While this library has been tested and seems to behave in a stable manner, it should be considered a preview version due to incompleteness. That is to say, it works for basic uses, but currently lacks many functions (and overloaded versions of existing functions) that somebody looking for a complete quaternion library might be looking for. 
 
 The rotation matrices this library outputs are for a right-handed co-ordinate system, like OpenGL uses. If somebody wants to right a left-handed version for the matrices it'll be accepted to the master branch.
 
